--- a/css/gamePage.css
+++ b/css/gamePage.css
@@ -1,4 +1,4 @@
-#card, #card-hidden, #card-red, #card-hidden-red {
+#card, #card-red {
     border: 3px solid #000000;
     display: inline-block;
     padding: 5px;
@@ -6,25 +6,22 @@
     height: 135px;
     border-radius: 10px;
     margin-right: 5px;
-}
-
-#card, #card-red {
     background-color: #FFFFFF;
 }
 
-#card-hidden, #card-hidden-red {
-    background-color: #0095FF;
-}
-
-#card, #card-hidden {
+#card {
     color: #000000;
 }
 
-#card-red, #card-hidden-red {
+#card-red {
     color: #FF0000;
 }
 
-#card #numL, #card-hidden #numL, #card-red #numL, #card-hidden-red #numL {
+#card.hidden, #card-red.hidden {
+    background-color: #0095FF;
+}
+
+#numL {
     display: block;
     font-size: 28px;
     margin-left: 5px;
@@ -32,7 +29,7 @@
     font-family: 'Varela Round', sans-serif;
 }
 
-#card #numR, #card-hidden #numR, #card-red #numR, #card-hidden-red #numR {
+#numR {
     display: block;
     font-size: 28px;
     margin-right: 5px;
@@ -40,17 +37,17 @@
     font-family: 'Varela Round', sans-serif;
 }
 
-#card #suit, #card-hidden #suit, #card-red #suit, #card-hidden-red #suit {
+#suit {
     display: block;
     font-size: 80px;
     text-align: center;
     margin: -10px;
 }
 
-#card #numL, #card #numR, #card #suit, #card-red #numL, #card-red #numR, #card-red #suit {
+#numL, #numR, #suit {
     visibility: visible;
 }
 
-#card-hidden #numL, #card-hidden #numR, #card-hidden #suit, #card-hidden-red #numL, #card-hidden-red #numR, #card-hidden-red #suit {
+.hidden #numL, .hidden #numR, .hidden #suit {
     visibility: hidden;
 }
