--- a/css/gamePage.css
+++ b/css/gamePage.css
@@ -51,3 +51,17 @@
 .hidden #numL, .hidden #numR, .hidden #suit {
     visibility: hidden;
 }
+
+#slotMachine {
+    display: inline-block;
+}
+
+#slotMachine div {
+    width: 86px;
+    height: 70px;
+    display: inline-block;
+    background-image: url("https://odhyan.com/slot/images/reel_normal.png");
+    background-repeat: repeat-y;
+    margin: -3px;
+    background-position-y: 0px;
+}
