--- a/css/gamePage.css
+++ b/css/gamePage.css
@@ -1,4 +1,51 @@
-#card, #card-red {
+body {
+    background-image: url("../doc/gameRoomBG.jpg");
+    background-size: cover;
+}
+
+#loginText {
+    float: right;
+    position: relative;
+    top: -20px;
+    font-size: 30px;
+    right: 10px;
+    font-family: 'Varela Round', sans-serif;
+    color: #FFFFFF;
+    text-align: right;
+}
+
+#loginState {
+    float: right;
+    position: relative;
+    top: -20px;
+    right: 30px;
+    font-size: 30px;
+    color: #ce4848;
+    font-family: 'Varela Round', sans-serif;
+    text-decoration: none;
+}
+
+#blackjack {
+    width: 850px;
+    height: 400px;
+    border: 20px solid #88491d;
+    border-radius: 1000px;
+    margin-left: 30px;
+    margin-top: 30px;
+    background-color: #2cbb13;
+}
+
+#plrCardArea, #cpuCardArea {
+    display: table;
+    margin: 0 auto;
+}
+
+#cpuCardArea {
+    margin-top: -5px;
+    margin-bottom: 70px;
+}
+
+#card, #card-red, #dummyCard {
     border: 3px solid #000000;
     display: inline-block;
     padding: 5px;
@@ -17,8 +64,62 @@
     color: #FF0000;
 }
 
-#card.hidden, #card-red.hidden {
+#card.hidden, #card-red.hidden, #dummyCard {
     background-color: #0095FF;
+}
+
+#dummyCard {
+    margin-top: -130px;
+    position: relative;
+    top: 260px;
+    left: 40px;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 55px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 135px;
+    color: #FFFFFF;
+}
+
+#hit {
+    position: relative;
+    top: -205px;
+    left: 485px;
+    background-color: #00ff2b;
+    border-radius: 6px;
+    border: 2px solid #000000;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 26px;
+}
+
+#stand {
+    position: relative;
+    top: -205px;
+    left: 485px;
+    background-color: #cc0c0c;
+    border-radius: 6px;
+    border: 2px solid #000000;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 26px;
+}
+
+#bjBet {
+    position: relative;
+    top: -205px;
+    left: 700px;
+    font-size: 20px;
+    font-family: 'Varela Round', sans-serif;
+    visibility: hidden;
+}
+
+#winner {
+    font-family: 'Varela Round', sans-serif;
+    position: relative;
+    top: -275px;
+    left: 330px;
+    font-size: 40px;
+    width: 200px;
+    text-align: center;
 }
 
 #numL {
@@ -54,9 +155,17 @@
 
 #slotMachine {
     display: inline-block;
+    background-color: #a01414;
+    width: 350px;
+    height: 375px;
+    position: relative;
+    left: 1000px;
+    border-radius: 15px;
+    top: -400px;
+    border: 6px solid #000000;
 }
 
-#slotMachine div {
+#slotMachine div[id *= "slotReel"] {
     width: 86px;
     height: 70px;
     display: inline-block;
@@ -64,4 +173,49 @@
     background-repeat: repeat-y;
     margin: -3px;
     background-position-y: 0px;
+    position: relative;
+    left: 55px;
+    top: -80px;
+}
+
+#slotMachine #decoText {
+    display: table;
+    margin: 0 auto;
+    position: relative;
+    font-size: 80px;
+    font-family: 'Varela Round', sans-serif;
+}
+
+#slotMachine #decorationBox {
+    display: table;
+    margin: 0 auto;
+    width: 75%;
+    background-color: #711212;
+    margin-top: 30px;
+    height: 90px;
+    border: 3px solid #000000;
+    border-radius: 5px;
+}
+
+#slotMachine button {
+    position: relative;
+    left: 8px;
+    font-size: 18px;
+    font-family: 'Varela Round', sans-serif;
+    border: 3px solid #c18383;
+    border-radius: 5px;
+    top: -30px;
+}
+
+#slotMachine #chips, #slotMachine #payout {
+    display: table;
+    font-size: 30px;
+    font-family: 'Varela Round', sans-serif;
+    top: -20px;
+    margin-left: 14px;
+    position: relative;
+}
+
+#blackjack #bjBet {
+    font-family: 'Varela Round', sans-serif;
 }
