--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+html{
+    background-image: url("../doc/gameRoomBG.jpg");
+    background-size: cover;
+}
+
 html,
 body {
   height: 100%;
@@ -6,7 +11,6 @@ body {
 body {
   margin: 0px;
   padding-left: 50px;
-  background: #22222d;
   font-family: "Open Sans", sans-serif;
   font-size: 13px;
 }
@@ -17,7 +21,7 @@ body {
   width: 700px;
   margin: 50px auto;
   background: #1b0303;
-  background-color: hsla(0, 96%, 29%, 0.767);
+  background-color: hsla(130, 88%, 20%, 0.767);
   color: hsla(180, 100%, 100%, 0.9);
   border-radius: 10px 20px 30px 30px;
   box-shadow: 10px 20px 10px black;
@@ -43,14 +47,27 @@ header h1 {
 }
 
 footer {
-  background-color: rgba(130, 151, 10, 0.9);
+  background-color: rgba(137, 143, 138, 0.9);
   color: rgba(0, 0, 0, 0.9);
   border: black solid 2px;
   border-radius: 10px 10px 10px 10px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
+  padding-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
-  margin-top: 750px;
+  margin-top: 930px;
+  margin-left: 20px;
+  position: absolute;
+  
+}
+
+footer>p{
+  display: inline;
+  padding-right: 10px;
+}
+
+footer>a{
+  color: black;
 }
 
 li {
@@ -58,14 +75,14 @@ li {
   padding: 2%;
   padding-left: 20px;
   width: 200px;
-  background-color: rgba(70, 71, 7, 0.9);
+  background-color: rgba(230, 178, 8, 0.9);
   border: black solid 2px;
   border-radius: 10px 10px 10px 10px;
   color: gold;
 }
 
 div.navigation {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   overflow: hidden;
   height: 150px;
@@ -84,10 +101,11 @@ div.navigation > ul {
 div.introduction {
   width: auto;
   height: auto;
+  background-color: rgba(105, 11, 11, 0.9);
   margin-bottom: 50px;
   border: black solid 2px;
   border-radius: 10px 10px 10px 10px;
-  box-shadow: 10px 20px 10px black;
+  box-shadow: 10px 10px 10px black;
 }
 div.introduction > p {
   padding-left: 30px;
@@ -99,9 +117,13 @@ div.introduction > h1 {
 }
 
 div.hours {
-  padding: 20px;
+  padding: 0px;
   padding-bottom: 40px;
   padding-left: 40px;
+  padding-right: 40px;
+  border: black solid 2px;
+  border-radius: 10px 10px 10px 10px;
+  background-color: rgba(105, 11, 11, 0.9);
 }
 
 div.aboutUs {
@@ -112,10 +134,7 @@ div.aboutUs {
   padding-bottom: 100px;
 }
 
-footer {
-  position: fixed;
-}
-
-img {
-  padding: 5%;
+img{
+  padding-left: 100px;
+  padding-bottom: 40px;
 }
