--- a/css/main.css
+++ b/css/main.css
@@ -127,11 +127,13 @@ div.hours {
 }
 
 div.aboutUs {
-  position: fixed;
   width: auto;
   height: auto;
-  margin-bottom: 100px;
-  padding-bottom: 100px;
+  background-color: rgba(105, 11, 11, 0.9);
+  margin-bottom: 50px;
+  border: black solid 2px;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 10px 10px 10px black;
 }
 
 img{
